fixed the agency tooltip on mobile

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_header.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_header.scss
@@ -159,7 +159,7 @@
       text-align: left;
 
       .my-agency-tooltip {
-        display: none;
+        display: none !important;
       }
     }
 
